--- a/Tic Tac Toe Game/style.css
+++ b/Tic Tac Toe Game/style.css
@@ -162,7 +162,7 @@ span {
   font-size: 1rem;
   width: 120px;
   background: rgba(255,255,255,0.13);
-  color: #232526;
+  color: #fff;
   transition: border 0.2s;
 }
 .player-names input:focus {
